@@ -41,12 +41,16 @@ inclusion/exclusion of files works, and how to write patterns.</p>
   <li>kjc (the <a href="http://www.dms.at/kopi/" target="_top">kopi</a>
     compiler)</li>
   <li>gcj (the gcj compiler from gcc)</li>
+  <li>extJavac (run either modern or classic in a JVM of its own)</li>
 </ul>
-<p>For JDK 1.1/1.2, classic is the default. For JDK 1.3, modern is the default.
+<p>For JDK 1.1/1.2, classic is the default. For JDK 1.3/1.4, modern is the default.
 If you wish to use a different compiler interface than one of the four
 supplied, write a class that implements the CompilerAdapter interface
 (package org.apache.tools.ant.taskdefs.compilers). Supply the full
 classname in the &quot;build.compiler&quot; property.
+</p>
+<p>The fork attribute overrides the build.compiler setting and expects
+a JDK1.1 or higher to be set in java.home.
 </p>
 <p>This task will drop all entries that point to non-existant
 files/directories from the CLASSPATH it passes to the compiler.</p>
@@ -176,6 +180,12 @@ files/directories from the CLASSPATH it passes to the compiler.</p>
       libraries from the executing VM; defaults to <code>no</code>.</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">fork</td> 
+    <td valign="top">whether to execute Javac using the JDK compiler externally;
+    defaults to <code>no</code>.</td>
+    <td align="center" valign="top">No</td>
+  </tr>  
   <tr>
     <td valign="top">failonerror</td> <td valign="top">
         indicates whether the build will continue even if there are compilation errors; defaults to <code>true</code>.
